--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="b2">
                 <h2>Coding</h2>
-                <h4>JAVA, C</h4>
+                <h4>JAVA, C, C++</h4>
             </div>
             <div class="b3">
                 <h2>Web Design</h2>
